<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gammax.ci</groupId>
    <artifactId>GammaXExchange</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>GammaXExchange</name>
    <url>http://maven.apache.org</url>

    <properties>
        <docker>${isDocker}</docker>
        <Reporting>${ReportingtoTestuff}</Reporting>
    </properties>

    <dependencies>
		    <!-- https://mvnrepository.com/artifact/org.aeonbits.owner/owner -->
		<dependency>
		    <groupId>org.aeonbits.owner</groupId>
		    <artifactId>owner</artifactId>
		    <version>1.0.12</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.creditdatamw.labs/zerocell-core -->
		<dependency>
		    <groupId>com.creditdatamw.labs</groupId>
		    <artifactId>zerocell-core</artifactId>
		    <version>0.3.2</version>
		</dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.5.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.relevantcodes</groupId>
            <artifactId>extentreports</artifactId>
            <version>2.41.2</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>4.4.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20210307</version>
		</dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.14.1</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.4.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>4.1</version>
        </dependency>
		<dependency>
			<groupId>com.relevantcodes</groupId>
			<artifactId>extentreports</artifactId>
			<version>2.41.2</version>
		</dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>data.properties</include>
                </includes>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <configuration>
                                <outputDirectory>target/extra-resources</outputDirectory>
                                <resources>
                                    <resource>
                                        <directory>.</directory>
                                        <filtering>true</filtering>
                                    </resource>
                                </resources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <environments>
                            <environment>
                                <docker>${isDocker}</docker>
                            </environment>
                            <environment>
                                <Reporting>${ReportingtoTestuff}</Reporting>
                            </environment>
                        </environments>
                        <suiteXmlFiles>
                            <!--<suiteXmlFile>src/test/resources/${suiteXml}</suiteXmlFile> -->
                            <suiteXmlFile>src/test/resources/SingleTest.xml</suiteXmlFile>
                        </suiteXmlFiles>
                        <reportsDirectory>src/test/resources/test-output</reportsDirectory>
                        <testFailureIgnore>true</testFailureIgnore>
                        <systemPropertyVariables>
                            <java.awt.headless>false</java.awt.headless>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
